# pioneerML_data_loaders

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
bindings/: CMakeLists.txt  arrow_utils.h  bindings.cpp  bindings.h
bindings/batch/: base_batch_bindings.cpp  endpoint_regressor_inputs_bindings.cpp  endpoint_regressor_targets_bindings.cpp  event_splitter_event_inputs_bindings.cpp  event_splitter_event_targets_bindings.cpp  group_classifier_inputs_bindings.cpp  group_classifier_targets_bindings.cpp  group_splitter_event_inputs_bindings.cpp  group_splitter_event_targets_bindings.cpp  group_splitter_inputs_bindings.cpp  group_splitter_targets_bindings.cpp
bindings/configurable/dataloaders/: base_loader_bindings.cpp
bindings/configurable/dataloaders/graph/: endpoint_regressor_event_loader_bindings.cpp  endpoint_regressor_loader_bindings.cpp  event_splitter_event_loader_bindings.cpp  group_classifier_event_loader_bindings.cpp  group_classifier_loader_bindings.cpp  group_splitter_event_loader_bindings.cpp  group_splitter_loader_bindings.cpp
bindings/configurable/input_adapters/graph/: endpoint_regressor_event_input_adapter_bindings.cpp  endpoint_regressor_input_adapter_bindings.cpp  event_splitter_event_input_adapter_bindings.cpp  group_classifier_event_input_adapter_bindings.cpp  group_classifier_input_adapter_bindings.cpp  group_splitter_event_input_adapter_bindings.cpp  group_splitter_input_adapter_bindings.cpp
bindings/configurable/output_adapters/graph/: endpoint_regressor_event_output_adapter_bindings.cpp  endpoint_regressor_output_adapter_bindings.cpp  event_splitter_event_output_adapter_bindings.cpp  group_classifier_event_output_adapter_bindings.cpp  group_classifier_output_adapter_bindings.cpp  group_splitter_event_output_adapter_bindings.cpp  group_splitter_output_adapter_bindings.cpp
bindings/dataloaders/: inference_bundle_bindings.cpp  training_bundle_bindings.cpp
bindings/dataloaders/graph/: group_classifier_config_bindings.cpp  group_classifier_loader_bindings.cpp
bindings/utils/: logging_bindings.cpp  timing_bindings.cpp
cpp/include/pioneerml/: dataloader.h
docs/: graph_loader_schemas.md
include/pioneerml_dataloaders/batch/: base_batch.h  endpoint_regressor_batch.h  event_splitter_event_batch.h  graph_batch.h  group_classifier_batch.h  group_splitter_batch.h  group_splitter_event_batch.h
include/pioneerml_dataloaders/configurable/: configurable.h
include/pioneerml_dataloaders/data_derivers/: base_deriver.h  group_summary_deriver.h  particle_mask_deriver.h  time_group_energy_deriver.h  time_grouper.h
include/pioneerml_dataloaders/dataloaders/: base_loader.h
include/pioneerml_dataloaders/derived/: time_grouper.h
include/pioneerml_dataloaders/io/: config_manager.h  (+4 more)
python/pioneerml_dataloaders/: __init__.py  specs.py
scripts/: build.sh  cleanup.sh
specs/: group_classifier.json
(+98 files in other folders)
